platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_118.platter
start() {
  order {
          piece of x = 1;
    x = x + 1;
  } repeat x < 3;
}
